[package]
name = "carguix"
version = "0.1.0"
authors = ["Gérald Lelong <gerald.lelong@easymov.fr>"]
edition = "2018"

[dependencies]
cargo_toml = "0.8.0"
structopt = "0.2.18"
crates-index = "0.13.2"
semver = "0.9.0"
log = "0.4.8"
heck = "0.3.1"
shellfn = "0.1.1"
tempdir = "0.3.7"
once_cell = "0.2.7"
reqwest = "0.9.20"
env_logger = "0.6.2"
rustbreak = "1.4.0"
err-derive = "0.1.5"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
mustache = "0.9.0"
sha2 = "0.8.0"
data-encoding = "2.1.2"
toml = "0.5.3"