[package]
name = "carguix"
version = "0.1.0"
authors = ["Gérald Lelong <gerald.lelong@easymov.fr>"]
edition = "2018"

[dependencies]
cargo_toml = "0.13.0"
structopt = "0.2.18"
lexpr = "0.2.3"
crates-index = "0.13.2"
semver = "0.9.0"
log = "0.4.8"
heck = "0.3.1"
shellfn = "0.1.1"
tempdir = "0.3.7"
once_cell = "1.16.0"
reqwest = "0.9.20"
env_logger = "0.6.2"
rustbreak = "1.4.0"
err-derive = "0.3"
